# mktplace-django

./: .env.example  .gitignore  docker-compose.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.docker/zsh/powerlevel10k/: .p10k.zsh
src/billing/: admin.py  forms.py  models.py
src/billing/migrations/: 0001_initial.py
src/login/: forms.py  urls.py  views.py
src/login/templates/registration/: register.html
src/mktplace/: asgi.py  settings.py  urls.py  wsgi.py
src/portal/: __init__.py  admin.py  apps.py  forms.py  lookups.py  models.py  urls.py  views.py
src/portal/migrations/: 0001_initial.py  0002_alter_category_options_product.py  0003_productquestion_productanswer.py  0004_userprofile.py  0005_productimages.py  0006_alter_product_user.py
src/portal/templates/: base.html
src/portal/templates/portal/: home.html  product_search.html  product_show.html
